test/cases/parser/ExternNameError.errors
src/ExternNameError.b:4:29: Syntax error (expected string)
