test/cases/parser/ExternNameError.b
module ExternNameError

interface {
    extern function foo() = 123;
}
